# numerous-apps

./: .coverage  .pre-commit-config.yaml  CHANGELOG.md  package-lock.json  pyproject.toml
.github/workflows/: release.yml
docs/: README.md
e-e-test/: e-e-test-script.py
e-e-test/multi-app-test/: admin_auth.db
e-e-test/root-management-test/: management_auth.db
examples/numerous/: Dockerfile  app.py  app_threaded.py  charts.py  index.html.j2  numerous_demo_app.py
examples/numerous/static/css/: styles.css
examples/numerous/static/js/: main.js
examples/simple/: index.html.j2  my_app.py
examples/simple/static/css/: styles.css
examples/simple/static/js/: main.js
python/src/numerous/apps/: __init__.py  _builtins.py  backend.py  numerous_server.py
python/src/numerous/apps/js/: numerous.js
python/src/numerous/apps/static/css/: styles.css
src/numerous/apps/: _communication.py  _execution.py  _server.py  app.py  app_factory.py  app_server.py  bootstrap.py  communication.py  execution.py  models.py  server.py
src/numerous/apps/js/: numerous.js
tests/: .coverage  test_app.py  test_communication.py
