[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "numerous-app"
version = "0.0.1"
description = "Application package for numerous"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "anywidget"
]

readme = "README.md"
license = {text = "MIT"}  # Adjust license as needed

[project.urls]
Homepage = "https://github.com/yourusername/numerous-app"
Repository = "https://github.com/yourusername/numerous-app"

[tool.setuptools]
package-dir = {"" = "python/src"}
packages = ["numerous.apps"]

[tool.setuptools.package-data]
"numerous.apps" = ["py.typed"]  # If you're using type hints

[project.scripts]
numerous-server = "numerous.apps.numerous_server:main"
